--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,6 +205,23 @@ Bara means big, and an imambara is a shrine built by Shia Muslims for the purpos
         Prabhadevi, Mumbai, Maharashtra.</string>
     <string name="m5">EsselWorld is an amusement park located in Gorai, Mumbai and established in 1989. The park is owned by Pan India
         Paryatan Pvt. Ltd. EsselWorld along with its counterparts, Water Kingdom are stretched over 64 acres of land.</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="title_activity_city_image">CityImageActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 
 </resources>
